# backend

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  compose.prod.yml  docker-compose.yml  pyproject.toml
app/: config.py  deps.py  main.py
app/adapters/: ai_client.py  db_pool.py  storage_client.py
app/core/: errors.py  images.py  logging.py  security.py
app/core/prompts/: __init__.py  image_prompt.py
app/repositories/: audit_repo.py  base.py  booth_repo.py  card_repo.py  job_repo.py  operator_repo.py  persona_repo.py  reward_repo.py  session_repo.py  student_repo.py
app/routers/: admin.py  auth.py  cards.py  dev.py  operator.py  sessions.py  students.py
app/schemas/: __init__.py  admin.py  auth.py  dev.py  persona.py
app/services/: admin_service.py  ai_service.py  auth_service.py  card_image_service.py  card_renderer.py  card_service.py  operator_service.py  persona_pipeline.py  reward_service.py  session_service.py
app/workers/: card_worker.py
scripts/exp/: __init__.py  generate_image.py
supabase/migrations/: 0001_create_pii_students.sql
tests/: test_admin_router.py  test_admin_service.py  test_ai_client_edit_image.py  test_ai_client_image.py  test_ai_client_models.py  test_auth_router.py  test_auth_service.py  test_card_image_service.py  test_card_renderer.py  test_config_s3.py  test_dev_persona_card.py  test_dev_portrait.py  test_healthz.py  test_image_prompts.py  test_images.py  test_persona_pipeline.py  test_storage_client.py
