[project]
name = "ibe-backend"
version = "0.1.0"
description = "진로 내비게이터 백엔드 — FastAPI + Supabase"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "qrcode>=8.2",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async best practices
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # 라인 길이는 ruff format에 위임

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_decorators = false

# aioboto3는 타입 스텁(py.typed)을 제공하지 않음 → import 분석 건너뜀
[[tool.mypy.overrides]]
module = ["aioboto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py"]
