[project]
name = "ibe-backend"
version = "0.1.0"
description = "진로 내비게이터 백엔드 — FastAPI + Supabase"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4는 bcrypt 5.0의 변경(>72바이트 비밀번호에서 truncate 대신 예외)과
    # 호환되지 않아 백엔드 초기화 자체가 실패한다. 4.x 계열로 고정.
    "bcrypt>=4.0.1,<5",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "qrcode>=8.2",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async best practices
    "RUF",           # ruff-specific
]
ignore = ["E501"]  # 라인 길이는 ruff format에 위임

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/main.py"]
